cmake_minimum_required(VERSION 3.18)
project(ladxx20 VERSION 0.1 LANGUAGES CXX)
set(CMAKE_BUILD_TYPE MinSizeRel)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
option(TIDY "Enable clang-tidy" OFF)
if(TIDY)
set(CMAKE_CXX_CLANG_TIDY clang-tidy)
endif(TIDY)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
add_subdirectory(lib)
add_subdirectory(tool)
